fix code style 1